# ouroboros

./: .gitignore  Cargo.toml  Dockerfile  README.md  agent-vault-prompt-v2.md  docker-compose.yml
.github/workflows/: build.yml  release-macos.yml
Formula/: agent-vault.rb
agent-vault/: Cargo.toml
agent-vault-common/: Cargo.toml
agent-vault-common/src/: lib.rs
agent-vault-ebpf/: Cargo.toml
agent-vault-ebpf/src/: main.rs
agent-vault/src/: ebpf.rs  main.rs  proxy.rs
xtask/: Cargo.toml
xtask/src/: main.rs
