[workspace]
members = [
    "agent-vault-common",
    "agent-vault-ebpf",
    "agent-vault",
]
# Don't try to build the eBPF crate with the host target by default.
# Build it explicitly: cargo +nightly build --package agent-vault-ebpf --target bpfel-unknown-none -Z build-std=core --release
default-members = ["agent-vault-common", "agent-vault"]
resolver = "2"
