[package]
name = "agent-vault-common"
version = "0.1.0"
edition = "2021"

[dependencies]
# aya is only needed to provide the `Pod` marker trait impl for user-space map operations.
# Feature is enabled by the user-space daemon crate, NOT the eBPF crate.
aya = { version = "0.13.1", optional = true, default-features = false }

[features]
default = []
userspace = ["dep:aya"]
# ebpf: reserved for future aya-ebpf-specific impls; no bounds require it today
ebpf = []
